Feature: change code to module (#114)
change api-server api and struct from code to module

---------
