# src/api-server/http/module_manager.go
@@ -40,7 +40,7 @@ import (
 // ModuleManager provides APIs to manage eBPF+WASM module received from the management Web UI.
 type ModuleManager struct {
 	DatasourceUID string
-	Module        dao.Module
+	Module        dao.ModuleDao
 	GrafanaClient GrafanaManagement
 	PGClient      *pg.Client
 }
@@ -53,7 +53,7 @@ type ModuleManager struct {
 // @Produce      json
 // @Param			   module	body	CreateModuleReq	true	"Create module"
 // @Success      200  {object}  CreateModuleResp
-// @Router       /api/addCode [post]
+// @Router       /api/addModule [post]
 func (mgr *ModuleManager) createModuleHttp(c *gin.Context) {
 	var body CreateModuleReq
 
@@ -99,7 +99,7 @@ func (mgr *ModuleManager) createModule(body CreateModuleReq) CreateModuleResp {
 		ID:                 strings.Replace(uuid.New(), "-", "_", -1),
 		Name:               body.Name,
 		CreateTime:         time.Now().Format("2006-01-02 15:04:05"),
-		Status:             int(pb.DeploymentState_CREATED),
+		DesireState:        int(pb.DeploymentState_CREATED),
 		Ebpf:               body.Ebpf.Code,
 		EbpfFmt:            int(body.Ebpf.Fmt),
 		EbpfLang:           int(body.Ebpf.Lang),
@@ -112,14 +112,14 @@ func (mgr *ModuleManager) createModule(body CreateModuleReq) CreateModuleResp {
 		WasmLang:           int(body.Wasm.Lang),
 	}
 
-	mod.SchemaName = fmt.Sprintf("%s_%s", "tricorder_code", mod.ID)
+	mod.SchemaName = fmt.Sprintf("%s_%s", "tricorder_module", mod.ID)
 
-	err = mgr.Module.SaveCode(mod)
+	err = mgr.Module.SaveModule(mod)
 	if err != nil {
-		log.Errorf("save code module error: %v", err)
+		log.Errorf("save module error: %v", err)
 		return CreateModuleResp{HTTPResp{
 			Code:    500,
-			Message: "Save code module error",
+			Message: "Save module error",
 		}}
 	}
 
@@ -137,27 +137,27 @@ func (mgr *ModuleManager) createModule(body CreateModuleReq) CreateModuleResp {
 // @Produce      json
 // @Param			   fields	 query	string	false  "query field search like 'id,name,createTime'"
 // @Success      200  {object}  ListModuleResp
-// @Router       /api/listCode [get]
-func (mgr *ModuleManager) listCodeHttp(c *gin.Context) {
+// @Router       /api/listModule [get]
+func (mgr *ModuleManager) listModuleHttp(c *gin.Context) {
 	// ?fields=id,name,status
 	fields, _ := c.GetQuery("fields")
 
-	result := mgr.listCode(fields)
+	result := mgr.listModule(fields)
 	c.JSON(http.StatusOK, result)
 }
 
-func (mgr *ModuleManager) listCode(fields string) ListModuleResp {
+func (mgr *ModuleManager) listModule(fields string) ListModuleResp {
 	var resultList []dao.ModuleGORM
 	var err error
 
 	if len(fields) > 0 {
-		resultList, err = mgr.Module.ListCode(fields)
+		resultList, err = mgr.Module.ListModule(fields)
 	} else {
-		resultList, err = mgr.Module.ListCode()
+		resultList, err = mgr.Module.ListModule()
 	}
 
 	if err != nil {
-		log.Errorf("Failed to list code, error: %v", err)
+		log.Errorf("Failed to list module, error: %v", err)
 		return ListModuleResp{HTTPResp{
 			Code:    500,
 			Message: "Query Error: " + err.Error(),
@@ -178,8 +178,8 @@ func (mgr *ModuleManager) listCode(fields string) ListModuleResp {
 // @Produce      json
 // @Param			   id	  query		  string	true	"delete module id"
 // @Success      200  {object}   HTTPResp
-// @Router       /api/deleteCode [get]
-func (mgr *ModuleManager) deleteCodeHttp(c *gin.Context) {
+// @Router       /api/deleteModule [get]
+func (mgr *ModuleManager) deleteModuleHttp(c *gin.Context) {
 	id, exist := c.GetQuery("id")
 	if !exist {
 		c.JSON(http.StatusOK, gin.H{"code": "500", "message": "id does not exist"})
@@ -213,20 +213,20 @@ func (mgr *ModuleManager) deleteCodeHttp(c *gin.Context) {
 // @Produce      json
 // @Param			   id	  query		  string	true	"deploy module id"
 // @Success      200  {object}  DeployModuleResp
-// @Router       /api/deployCode [post]
-func (mgr *ModuleManager) deployCodeHttp(c *gin.Context) {
+// @Router       /api/deployModule [post]
+func (mgr *ModuleManager) deployModuleHttp(c *gin.Context) {
 	id, exist := c.GetQuery("id")
 	if !exist {
 		c.JSON(http.StatusOK, gin.H{"code": "500", "message": "id cannot be empty"})
 		return
 	}
-	result := mgr.deployCode(id)
+	result := mgr.deployModule(id)
 	c.JSON(http.StatusOK, result)
 }
 
-func (mgr *ModuleManager) deployCode(id string) DeployModuleResp {
-	// Check whether the code exists
-	code, err := mgr.Module.QueryByID(id)
+func (mgr *ModuleManager) deployModule(id string) DeployModuleResp {
+	// Check whether the module exists
+	module, err := mgr.Module.QueryByID(id)
 	if err != nil {
 		return DeployModuleResp{
 			HTTPResp{
@@ -237,7 +237,7 @@ func (mgr *ModuleManager) deployCode(id string) DeployModuleResp {
 		}
 	}
 
-	err = mgr.createPGTable(code)
+	err = mgr.createPGTable(module)
 	if err != nil {
 		log.Error("Failed to create PG table")
 		return DeployModuleResp{
@@ -250,7 +250,7 @@ func (mgr *ModuleManager) deployCode(id string) DeployModuleResp {
 	}
 	log.Info("Created postgres table")
 
-	uid, err := mgr.createGrafanaDashboard(code.ID)
+	uid, err := mgr.createGrafanaDashboard(module.ID)
 	if err != nil {
 		log.Error("Failed to create Grafana dashboard")
 
@@ -282,8 +282,8 @@ func (mgr *ModuleManager) deployCode(id string) DeployModuleResp {
 // @Produce      json
 // @Param			   id	  query		 string	 true	 "undeploy module id"
 // @Success      200  {object}  HTTPResp
-// @Router       /api/undeployCode [post]
-func (mgr *ModuleManager) undeployCodeHttp(c *gin.Context) {
+// @Router       /api/undeployModule [post]
+func (mgr *ModuleManager) undeployModuleHttp(c *gin.Context) {
 	id, exist := c.GetQuery("id")
 	if !exist {
 		c.JSON(http.StatusOK, HTTPResp{
@@ -294,7 +294,7 @@ func (mgr *ModuleManager) undeployCodeHttp(c *gin.Context) {
 	}
 	err := mgr.Module.UpdateStatusByID(id, int(pb.DeploymentState_TO_BE_UNDEPLOYED))
 	if err != nil {
-		log.Errorf("pre-undeploy code: [%s] failed: %s", id, err.Error())
+		log.Errorf("pre-undeploy module: [%s] failed: %s", id, err.Error())
 		c.JSON(http.StatusOK, HTTPResp{
 			Code:    500,
 			Message: "undeploy error: " + err.Error(),
@@ -308,23 +308,23 @@ func (mgr *ModuleManager) undeployCodeHttp(c *gin.Context) {
 	})
 }
 
-// Generate schema name tricorder_code_{moduleID}
+// Generate schema name tricorder_module_{moduleID}
 func getModuleDataTableName(id string) string {
-	const moduleDataTableNamePrefix = "tricorder_code_"
+	const moduleDataTableNamePrefix = "tricorder_module_"
 	return moduleDataTableNamePrefix + id
 }
 
 // createPGTable creates a data table on the database that stores observability data.
 // Agents can then write the data produced by the deployed eBPF+WASM module to this table.
-func (mgr *ModuleManager) createPGTable(code *dao.ModuleGORM) error {
+func (mgr *ModuleManager) createPGTable(module *dao.ModuleGORM) error {
 	var fields []*commonpb.DataField
-	err := json.Unmarshal([]byte(code.SchemaAttr), &fields)
+	err := json.Unmarshal([]byte(module.SchemaAttr), &fields)
 	if err != nil {
 		return fmt.Errorf("while creating output data table for module '%s', "+
-			"failed to unmarshal column schemas, error: %v", code.Name, err)
+			"failed to unmarshal column schemas, error: %v", module.Name, err)
 	}
 	if len(fields) == 0 {
-		log.Infof("Module '%s' has no data schema defined", code.Name)
+		log.Infof("Module '%s' has no data schema defined", module.Name)
 		return nil
 	}
 	columns, err := DataFieldsToPGColumns(fields)
@@ -332,7 +332,7 @@ func (mgr *ModuleManager) createPGTable(code *dao.ModuleGORM) error {
 		return err
 	}
 	schema := pg.Schema{
-		Name:    getModuleDataTableName(code.ID),
+		Name:    getModuleDataTableName(module.ID),
 		Columns: columns,
 	}
 	err = mgr.PGClient.CreateTable(&schema)
@@ -359,7 +359,7 @@ func (mgr *ModuleManager) createGrafanaDashboard(moduleID string) (string, error
 
 	err = mgr.Module.UpdateStatusByID(moduleID, int(pb.DeploymentState_TO_BE_DEPLOYED))
 	if err != nil {
-		log.Errorf("pre-deploy code: [%s] failed: %s", moduleID, err.Error())
+		log.Errorf("pre-deploy module: [%s] failed: %s", moduleID, err.Error())
 		return "", err
 	}
 
